# itmo-math-rgr-2-triangulation

./: CMakeLists.txt  main.cpp
src/: Application.cpp  Application.h
src/Polygon/: Polygon.cpp  Polygon.h
src/Polygon/Vertex/: Vert.cpp  Vert.h
src/Utils/: Utils.h
